test/must_fail/sub_equation_with_undeclared_identifier.ngjs
#!/usr/bin/env ngspicejs
// Sub equation has undeclared parameter "res" but params uses "r"
// linter: ngspicejs-lint
"use strict";

//echo_trap('aa');

var p = sub_model('POT2B', ['start', 'wiper', 'end'], {r: '1k', percent: 50});
p.resistor('R1', 'start', 'wiper').r('{res * percent / 100}');
p.resistor('R2', 'wiper', 'end').r('{res * (100 - percent) / 100}');
p.end();

battery('U1', 1, 0, 9);
sub('x1', 'POT2B', [0, 2, 1], {r: 200, percent: 5});
var t1 = tran().run().chart('V(2)');
echo('current', t1.avg('I(U1)').toEng(), 'should be 9/200=', (9/200).toEng());

